--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "diabetes_data = df.copy(deep = True)\n",
-    "diabetes_data[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']] = diabetes_data[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']].replace(0,np.NaN)"
+    "diabetes_data[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']] = diabetes_data[['Glucose','BloodPressure','SkinThickness','Insulin','BMI']].replace(0,np.nan)"
    ]
   },
   {
